test: 당첨 내역 입출력 기능 추가